# esp-ui-phone_480_480_stylesheet

./: .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  README.md  check_copyright_config.yaml  idf_component.yml  library.properties
.github/scripts/: check_lib_versions.sh
.github/workflows/: upload_component.yml
src/: esp_ui_phone_480_480_stylesheet.h
src/assets/: esp_ui_phone_480_480_app_launcher_image_default.c  esp_ui_phone_480_480_navigation_bar_image_back.c  esp_ui_phone_480_480_navigation_bar_image_home.c  esp_ui_phone_480_480_navigation_bar_image_recents_screen.c  esp_ui_phone_480_480_recents_screen_trash_image.c  esp_ui_phone_480_480_status_bar_battery_image_charge.c  esp_ui_phone_480_480_status_bar_battery_image_level_1.c  esp_ui_phone_480_480_status_bar_battery_image_level_2.c  esp_ui_phone_480_480_status_bar_battery_image_level_3.c  esp_ui_phone_480_480_status_bar_battery_image_level_4.c  esp_ui_phone_480_480_status_bar_wifi_image_close.c  esp_ui_phone_480_480_status_bar_wifi_image_level_1.c  esp_ui_phone_480_480_status_bar_wifi_image_level_2.c  esp_ui_phone_480_480_status_bar_wifi_image_level_3.c
src/stylesheet/dark/: app_launcher_data.h  core_data.h  gesture_data.h  navigation_bar_data.h  recents_screen_data.h  status_bar_data.h
